# ncollectd

./: .gitignore  CMakeLists.txt  COPYING  Makefile.am  README.md  build.sh  clean.sh  configure.ac
src/libcompress/: CMakeLists.txt  compress.c  compress.h  csnappy.h  csnappy_compress.c  slz.c  slz.h  tables.h
src/libconfig/: CMakeLists.txt  aux_types.h  config.c  config.h  parser.y  scanner.l
src/libexpr/: CMakeLists.txt  eval.c  expr.c  expr.h  expr_test.c  parser.y  scanner.l  symtab.c
src/libformat/: CMakeLists.txt  format.c  format.h  graphite_line.c  graphite_line.h  graphite_line_test.c  influxdb.c  influxdb.h  influxdb_test.c  json.c  json.h  json_test.c  log_json.c  log_json.h  log_logfmt.c  log_logfmt.h  log_logstash.c  log_logstash.h  log_text.c  log_text.h  notification_json.c  notification_json.h  notification_proto.c  notification_proto.h  notification_text.c  notification_text.h  openmetrics_proto.c  openmetrics_proto.h  openmetrics_text.c  openmetrics_text.h  openmetrics_text_test.c  opentelemetry_json.c  opentelemetry_json.h  opentelemetry_json_test.c  opentsdb_json.c  opentsdb_json.h  opentsdb_json_test.c  opentsdb_telnet.c  opentsdb_telnet.h  opentsdb_telnet_test.c  (+2 more)
src/libgraph/: CMakeLists.txt  graph.c  graph.h  graph_gfx.h  graph_gfx_svg.c  image.c  parsetime.c  schrift.c  schrift.h  spng.c  spng.h
src/libhttp/: CMakeLists.txt  client.h  common.c  header.c  header.h  http.c  http.h  http_test.c  httpd.c  httpd.h  lookup.gperf  parser.c  parser.h
src/libmdb/: CMakeLists.txt  crc32c.c  crc32c.h  eval.c  family.c  family.h  family_metric_list.c  family_metric_list.h  functions.c  functions.h  index.c  index.h  mdb.c  mdb.h  metric_id.c  metric_id.h  midx_disk.c  midx_disk.h  mql.c  mql.h  node.c  node.h  parser.y  rindex.c  rindex.h  scanner.l  series_list.c  series_list.h  storage.c  storage.h  strlist.c  strlist.h  table.c  table.h  util.c  util.h  value.c  value.h
src/libmetric/: CMakeLists.txt  histogram.c  histogram.h  label_set.c  label_set.h  label_set_test.c  marshal.c  marshal.h  metric.c  metric.h  metric_chars.c  metric_chars.h  metric_match.c  metric_match.h  metric_test.c  notification.c  notification.h  pack_test.c  parser.c  parser.h  parser_test.c  rate.c  rate.h  state_set.c  state_set.h  summary.c  summary.h
src/libquickjs/: CMakeLists.txt  cutils.c  cutils.h  dtoa.c  dtoa.h  libregexp-opcode.h  libregexp.c  libregexp.h  libunicode.c  libunicode.h  list.h  quickjs-atom.h  quickjs-libc.c  quickjs-libc.h  quickjs-opcode.h  quickjs.c  quickjs.h
src/libutils/: CMakeLists.txt  avltree.c  avltree.h  avltree_test.c  buf.c  buf.h  buf_pb.h  common.c  common.h  common_test.c  complain.c  complain.h  config.c  config.h  dtoa.c  dtoa.h  dtoa_test.c  exclist.c  exclist.h  exec.c  exec.h  getopt_long.c  getopt_long.h  heap.c  heap.h  heap_test.c  htable.c  htable.h  itoa.c  itoa.h  itoa_test.c  llist.c  llist.h  mount.c  mount.h  mount_test.c  pack.h  random.c  random.h  socket.c  (+11 more)
src/libxson/: CMakeLists.txt  buf.h  bytestack.h  common.h  encode.c  encode.h  json.c  json_parse.h  json_render.c  json_render.h  lex.c  lex.h  parser.c  parser.h  render.c  render.h  render_bjson.c  render_syaml.h  struct.c  struct.h  tree.c  tree.h  value.c  value.h  yaml_render.c
src/ncollectd/: CMakeLists.txt  cmd.c  cmd.h  collectd.c  configfile.c  configfile.h  distribution.h  distribution_test.c  filter.c  filter.h  globals.c  globals.h  httpd.c  httpd.h  journal.c  journal.h  label_set.c  label_set.h  meta_data.c  metric.c  metric.h  metric_chars.c  metric_match.c  ncollectd.1  ncollectd.c  ncollectd.conf.5  ncollectd.conf.in  notification.c  plugin.c  plugin.h  plugin_internal.h  plugin_match.c  plugin_match.h  plugin_mock.c  plugin_notify.c  plugin_read.c  plugin_write.c  queue.c  queue.h  utils_cache.c  (+7 more)
src/ncollectdctl/: CMakeLists.txt  client.c  client.h  ncollectdctl.1  ncollectdctl.c
src/ncollectdmon/: CMakeLists.txt  ncollectdmon.1  ncollectdmon.c  ncollectdmon.pod
src/plugins/apache/: CMakeLists.txt  Makefile.am  README.md  apache.c  apache_test.c  ncollectd-apache.5  ncollectd-apache.pod
src/plugins/apache/test01/: expect.txt  status
src/plugins/apcups/: CMakeLists.txt  README.md  apcups.c  ncollectd-apcups.5
src/plugins/arp/: CMakeLists.txt  Makefile.am  README.md  arp.c  arp_test.c  ncollectd-arp.5
src/plugins/arp/test01/: expect.txt
src/plugins/arp/test01/proc/net/: arp
src/plugins/arpcache/: CMakeLists.txt  README.md  arpcache.c  arpcache_test.c  ncollectd-arpcache.5
src/plugins/arpcache/test01/: expect.txt
src/plugins/arpcache/test01/proc/net/stat/: arp_cache  ndisc_cache
src/plugins/ats/: CMakeLists.txt  README.md  ats.c  ats.gperf  ats_test.c  ncollectd-ats.5
src/plugins/ats/test01/: _stats  expect.txt
src/plugins/avccache/: CMakeLists.txt  Makefile.am  README.md  avccache.c  avccache_test.c  ncollectd-avccache.5
src/plugins/avccache/test01/: expect.txt
src/plugins/avccache/test01/sys/fs/selinux/avc/: cache_stats
src/plugins/battery/: CMakeLists.txt  README.md  battery.c  ncollectd-battery.5
src/plugins/bcache/: CMakeLists.txt  README.md  bcache.c  ncollectd-bcache.5
src/plugins/beanstalkd/: CMakeLists.txt  README.md  beanstalkd.c  beanstalkd_stats.gperf  beanstalkd_test.c  ncollectd-beanstalkd.5
src/plugins/beanstalkd/test01/: expect.txt  stats
src/plugins/bind/: CMakeLists.txt  README.md  bind.c  bind_fams.gperf  bind_fams.h  bind_json.c  bind_json.h  bind_xml.c  bind_xml.h  ncollectd-bind.5
src/plugins/bonding/: CMakeLists.txt  README.md  bonding.c  bonding_test.c  ncollectd-bonding.5
src/plugins/bonding/test01/: expect.txt
src/plugins/btrfs/: CMakeLists.txt  Makefile.am  README.md  btrfs.c  ncollectd-btrfs.5
src/plugins/buddyinfo/: CMakeLists.txt  Makefile.am  README.md  buddyinfo.c  buddyinfo_test.c  ncollectd-buddyinfo.5  ncollectd-buddyinfo.pod
src/plugins/buddyinfo/test01/: expect.txt
src/plugins/buddyinfo/test01/proc/: buddyinfo
src/plugins/ceph/: CMakeLists.txt  README.md  ceph.c  ncollectd-ceph.5
src/plugins/cert/: CMakeLists.txt  README.md  cert.c  ncollectd-cert.5
(+1691 files in other folders)
